--- a/upload/admin/view/template/extension/module/custom_menu_add_nik.twig
+++ b/upload/admin/view/template/extension/module/custom_menu_add_nik.twig
@@ -22,7 +22,7 @@
   }
 
   .sidenav-other {
-    height: 100%;
+    height: fit-content%;
     width: 50%;
     z-index: 1;
     position: relative;
