--- a/upload/catalog/view/theme/default/template/extension/module/custom_menu_nik.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/custom_menu_nik.twig
@@ -295,7 +295,7 @@
       {% elseif item.blocks %}
         {% if item.link %}
           <span class="{{ item.class }}" data-img="{{ item.thumb }}">
-            <div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
               <a href="{{ item.link }}">{{ item.name }}</a>
               <i class="fa fa-caret-right pull-right dropdown-arrow"></i>
             </div>
